styles.css
@font-face {
  font-family: RedHatDisplay;
  src: url(starter-code/assets/fonts/RedHatDisplay-VariableFont_wght.ttf);
}

/**/
/*Mobile Styles*/
/**/

* {
  font-family: RedHatDisplay;
  margin: 0;
}

.logo {
  margin: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo img {
  text-align: center;
  height: 28px;
  width: 119px;
}

.hero-banner {
  display: flex;
  margin-bottom: 30px;
}

.hero-banner .hero-banner-left {
  width: 50%;
  background-image: url(starter-code/assets/desktop/image-hero-left.png);
  background-size: contain;
  background-repeat: no-repeat;
  height: 170px;
}

.hero-banner .hero-banner-right {
  width: 50%;
  background-image: url(starter-code/assets/desktop/image-hero-right.png);
  background-size: contain;
  background-repeat: no-repeat;
  height: 170px;
}

.main {
  margin: 0 40px;
}

.intro {
  padding-bottom: 64px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.intro h1 {
  padding: 0 20px;
  color: #28283d;
  text-align: center;
  font-size: 40px;
  font-weight: 900;
  margin-bottom: 24px;
}

.intro p {
  color: #87879d;
  text-align: center;
  font-size: 16px;
  font-weight: 500;
  margin-bottom: 32px;
}

.buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

button {
  color: #fff;
  font-size: 16px;
  font-weight: 900;
  box-shadow: none;
  border: none;
  height: 58px;
  border-radius: 29px;
  text-align: center;
}

.download {
  width: 193px;
  background: #4d96a9;
}

.download .version {
  color: #8fe3f9;
}

.what-is-it {
  background: #855fb1;
  width: 139px;
}

.section-one {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
.section-one::before {
  content: "";
  display: block;
  border-left: 1px solid #87879d;
  height: 84px;
  position: absolute;
  margin-left: 50%;
  margin-right: 50%;
}

.round-number {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 56px;
  height: 56px;
  border-radius: 29px;
  border: 1px solid rgba(135, 135, 157, 0.25);
  background: #fafafa;
  color: #87879d;
  font-size: 16px;
  font-weight: 900;
  margin-top: 84px;
  margin-bottom: 64px;
}

.image-section {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  gap: 24px;
  margin-bottom: 64px;
}

.image-section img {
  width: 45%;
  border-radius: 8px;
  background: #d8d8d8;
}

.section-one h3 {
  color: #4d96a9;
  font-size: 16px;
  font-weight: 900;
  letter-spacing: 4px;
  text-transform: uppercase;
  margin-bottom: 24px;
}

.section-one h2 {
  color: #28283d;
  font-size: 32px;
  font-weight: 900;
  margin-bottom: 32px;
  padding: 0 10px;
}

.section-one p {
  color: #87879d;
  font-size: 16px;
  font-weight: 500;
}

.section-two {
  margin-top: 170px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 100vw;
  color: #fafafa;
  height: 470px;
  background: url("/starter-code/starter-code/assets/mobile/image-footer.jpg");
  background-size: cover;
  position: relative;
}

.section-two::before {
  content: "";
  display: block;
  border-left: 1px solid #87879d;
  height: 84px;
  position: absolute;
  margin-left: 50%;
  margin-right: 50%;
  margin-top: -100px;
}

.two {
  z-index: 99;
  margin-top: -32px;
}

.image-section-footer {
  background-color: #4d96a9;
  opacity: 0.8;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer-text {
  padding: 0px 50px;
}

.footer-text h2 {
  margin: 0;
  padding-top: 90px;
  font-size: 32px;
}

.footer-text p {
  padding-top: 24px;
  font-size: 18px;
}
.section-two .buttons {
  padding-top: 32px;
}

.section-two .download {
  background: #855fb1;
}

.footer-version {
  color: #d9b8ff;
}
/**/
/*Tablet Styles*/
/**/
@media only screen and (min-width: 768px) {
  .hero-banner {
    height: 300px;
    background-image: url(starter-code/assets/tablet/image-hero.png);
    background-size: contain;
    background-repeat: no-repeat;
  }
  .hero-banner-left {
    display: none;
  }
  .hero-banner-right {
    display: none;
  }

  .main {
    margin: 0 40px;
  }

  .intro {
    padding-bottom: 80px;
  }

  .intro h1 {
    width: 45%;
    font-size: 48px;
  }

  .intro p {
    width: 60%;
  }

  .buttons {
    flex-direction: row;
  }

  .image-section {
    gap: 12px;
    margin-bottom: 48px;
  }

  .image-section img {
    width: 23%;
  }
  .section-one h3 {
    margin-bottom: 16px;
  }

  .section-one h2 {
    font-size: 40px;
    width: 55%;
    line-height: 44px;
  }
  .section-one p {
    width: 65%;
    line-height: 26px;
  }

  .section-two {
    margin-top: 184px;
    height: 428px;
    background: url("starter-code/assets/tablet/image-footer.jpg");
  }
  .footer-text {
    padding: 0px 110px;
  }
  .footer-text h2 {
    font-size: 40px;
    line-height: 44px;
  }

  .section-two .buttons {
    padding-top: 32px;
  }
}

/**/
/*Desktop Styles*/
/**/
@media only screen and (min-width: 992px) {
  .hero-banner {
    height: 310px;
    background-image: none;
    display: flex;
  }
  .hero-banner .hero-banner-left {
    height: 394px;
    width: 500px;
    display: block;
    margin-left: -50px;
    background-image: url(starter-code/assets/desktop/image-hero-left.png);
  }
  .hero-banner .hero-banner-right {
    height: 394px;
    width: 500px;
    display: block;
    position: absolute;
    right: 0;
    margin-right: -50px;
    background-image: url(starter-code/assets/desktop/image-hero-right.png);
  }
  .intro {
    margin-top: -350px;
  }

  .intro h1 {
    width: 25%;
    font-size: 64px;
  }

  .intro p {
    font-size: 18px;
    width: 40%;
  }

  button {
    font-size: 18px;
  }

  .intro .buttons .download:hover {
    background: #71c0d4;
  }

  .buttons .what-is-it:hover {
    background: #b18bdd;
  }

  .image-section {
    gap: 24px;
    margin-bottom: 80px;
  }
  .section-one h2 {
    font-size: 40px;
    margin-bottom: 32px;
    width: 26%;
  }
  .section-one p {
    font-size: 18px;
    width: 32%;
  }

  .section-two {
    height: 308px;
    background: url("starter-code/assets/desktop/image-footer.jpg");
    background-repeat: no-repeat;
    background-size: cover;
  }

  .image-section-footer {
    flex-direction: row;
  }

  .footer-text {
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: left;
  }
  .footer-text h2 {
    width: 30%;
    padding-top: 0;
    padding-left: 135px;
    padding-right: 125px;
  }
  .footer-text p {
    width: 31%;
    padding-top: 0;
    padding-right: 92px;
  }
  .image-section-footer .buttons .download:hover {
    background: #b18bdd;
  }
  .buttons {
    padding-top: 0;
    padding-right: 165px;
    opacity: 1;
  }
}

